--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -49,7 +49,7 @@
     <div class="info">
         <p>
             This website use cookies to help you have a superior and more relevant
-            browsing experience on the website. <a href="#"> Read more...</a>
+            browsing experience on the website. <a href="{{ url_for('cookies') }}"> Read more...</a>
         </p>
     </div>
     <div class="buttons">
