--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -101,18 +101,18 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#hero">Home</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#services">Services</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#contact">Contact Us</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#hero">Home</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Services</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#contact">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Our Services</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#services">Micro and Macro Automation</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#services">Software Solutions</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#services">Data Cleaning and Visualization</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#services">Machine Learning and AI models</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Micro and Macro Automation</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Software Solutions</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Data Cleaning and Visualization</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Machine Learning and AI models</a></li>
                     </ul>
                 </div>
             </div>
