--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -85,9 +85,8 @@
     <div class="footer-top">
         <div class="container">
             <div class="row">
-
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Mad Guy</h3>
+                    <h3>M<span class="mad">a</span>d G<span class="mad">u</span>y</h3>
                     <h3>Automation</h3>
                     <p><a href="#map">
                         166 Geary Street, 1670 <br>
@@ -97,7 +96,6 @@
                         <strong>Email:</strong><a href="mailto:paulged@icloud.com"> paulged@icloud.com</a><br>
                     </p>
                 </div>
-
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
