--- a/templates/index.html
+++ b/templates/index.html
@@ -35,14 +35,14 @@
             <div class="row content">
                 <div class="col-lg-6">
                     <p>
-                        That's the motto of Mad Man Automation, the software, automation, and data analytics solutions
+                        That's the motto of Mad Guy Automation, the software, automation, and data analytics solutions
                         provider.
                         <br><br>
                         We pride ourselves on being lateral thinkers who pride on using unique and creative software
                         solutions
                         for the challanges our customers face.
                         <br><br>
-                        But don't let our demeanor fool you. When it comes to getting the job done, Mad Man
+                        But don't let our demeanor fool you. When it comes to getting the job done, Mad Guy
                         Automation is serious business.
                     </p>
                 </div>
