--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -88,7 +88,7 @@
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>M<span class="mad">a</span>d G<span class="mad">u</span>y</h3>
                     <h3>Automation</h3>
-                    <p><a href="https://mad-guy.herokuapp.com/#map">
+                    <p><a href="https://mad-guy.herokuapp.com/#contact">
                         166 Geary Street, 1670 <br>
                         San Francisco, CA 94108<br>
                         United States </a><br><br>
