update links and email

--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -88,29 +88,29 @@
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>M<span class="mad">a</span>d G<span class="mad">u</span>y</h3>
                     <h3>Automation</h3>
-                    <p><a href="https://mad-guy.herokuapp.com/#contact">
+                    <p><a href="http://www.madguy.net/#contact">
                         166 Geary Street, 1670 <br>
                         San Francisco, CA 94108<br>
                         United States </a><br><br>
                         <strong>Phone:</strong><a href="tel:+14152121444"> +1 415 212 1444</a><br>
-                        <strong>Email:</strong><a href="mailto:paulged@icloud.com"> paulged@icloud.com</a><br>
+                        <strong>Email:</strong><a href="mailto:hi@madguy.net"> hi@madguy.net</a><br>
                     </p>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#hero">Home</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Services</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#contact">Contact Us</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#hero">Home</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Services</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#contact">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Our Services</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Micro and Macro Automation</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Software Solutions</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Data Cleaning and Visualization</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://mad-guy.herokuapp.com/#services">Machine Learning and AI models</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Micro and Macro Automation</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Software Solutions</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Data Cleaning and Visualization</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Machine Learning and AI models</a></li>
                     </ul>
                 </div>
             </div>
