--- a/templates/index.html
+++ b/templates/index.html
@@ -282,7 +282,7 @@
                     <div class="email">
                         <i class="bi bi-envelope"></i>
                         <h4>Email:</h4>
-                        <p><a href="mailto:paulged@icloud.com">paulged@icloud.com</a></p>
+                        <p><a href="mailto:hi@madguy.net">hi@madguy.net</a></p>
                     </div>
                 </div>
                 <div class="phone">
