update hyperlinks and email

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
                                 </div>
                             </li>
                             <li>
-                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed"><span>3</span>
+                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>3</span>
                                     Inaccurate data? <i
                                             class="bx bx-chevron-down icon-show"></i><i
                                             class="bx bx-chevron-up icon-close"></i></a>
@@ -120,7 +120,7 @@
 
                             </li>
                             <li>
-                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed"><span>4</span>
+                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed"><span>4</span>
                                     Lack of collaboration? <i
                                             class="bx bx-chevron-down icon-show"></i><i
                                             class="bx bx-chevron-up icon-close"></i></a>
@@ -138,7 +138,7 @@
 
                             </li>
                             <li>
-                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-6" class="collapsed"><span>5</span>
+                                <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed"><span>5</span>
                                     Scalability challenges? <i
                                             class="bx bx-chevron-down icon-show"></i><i
                                             class="bx bx-chevron-up icon-close"></i></a>
@@ -256,7 +256,7 @@
                     </p>
                 </div>
                 <div class="col-lg-3 cta-btn-container text-center">
-                    <a class="cta-btn align-middle scrollto" href="#contact">Contact Us</a>
+                    <a class="cta-btn align-middle scrollto" href="http://www.madguy.net/#contact">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -276,7 +276,7 @@
                 <div class="address">
                     <i class="bi bi-geo-alt"></i>
                     <h4>Location:</h4>
-                    <p><a href="#map">166 Geary St, 1670, San Francisco, CA 94108</a></p>
+                    <p><a href="http://www.madguy.net/#map">166 Geary St, 1670, San Francisco, CA 94108</a></p>
                 </div>
                 <div id="map">
                     <div class="email">
@@ -297,6 +297,8 @@
 
 
             </div>
+        </div>
+
     </section><!-- End Contact Section -->
 </main><!-- End #main -->
 {% endblock body %}
