--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -68,10 +68,10 @@
 
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                <li><a class="nav-link scrollto" href="#about">About</a></li>
-                <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                <li><a class="nav-link scrollto active" href="http://www.madguy.net/#hero">Home</a></li>
+                <li><a class="nav-link scrollto" href="http://www.madguy.net/#about">About</a></li>
+                <li><a class="nav-link scrollto" href="http://www.madguy.net/#services">Services</a></li>
+                <li><a class="nav-link scrollto" href="http://www.madguy.net/#contact">Contact</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
