turbo_task rebrand

--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Mad Guy</title>
+    <title>Turbo Task</title>
     <meta content="Transform your business with cutting-edge automation and data analytics solutions. Mad Guy Automation combines advanced technologies and expertise to help you streamline operations, improve productivity, and gain valuable insights from your data. Discover how our innovative tools and services can revolutionize your business today."
           name="description">
     <meta content="automation, data analytics, business transformation, productivity, efficiency, insights, machine learning, artificial intelligence, predictive analytics, data visualization, process optimization, data-driven decision-making, cloud computing, digital transformation."
           name="keywords">
 
     <!-- Favicons -->
-    <link href="{{ url_for('static', filename='img/mad guy favicon.png') }}" rel="icon">
-    <link href="{{ url_for('static', filename='img/mad guy favicon ipad touch.png') }}" rel="apple-touch-icon">
+    <link href="{{ url_for('static', filename='img/tt favicon.png') }}" rel="icon">
+    <link href="{{ url_for('static', filename='img/tt favicon ipad touch.png') }}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,15 +63,15 @@
 
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="{{ url_for('index') }}" style="width:300px;" class="logo me-auto"><img
-                src="{{ url_for('static', filename='img/mad guy logo.svg') }}" alt="mad guy automation logo"
+                src="{{ url_for('static', filename='img/logo.svg') }}" alt="Turbo Task Automation logo"
                 class="img-fluid"></a>
 
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto active" href="http://www.madguy.net/#hero">Home</a></li>
-                <li><a class="nav-link scrollto" href="http://www.madguy.net/#about">About</a></li>
-                <li><a class="nav-link scrollto" href="http://www.madguy.net/#services">Services</a></li>
-                <li><a class="nav-link scrollto" href="http://www.madguy.net/#contact">Contact</a></li>
+                <li><a class="nav-link scrollto active" href="http://www.turbotask.co/#hero">Home</a></li>
+                <li><a class="nav-link scrollto" href="http://www.turbotask.co/#about">About</a></li>
+                <li><a class="nav-link scrollto" href="http://www.turbotask.co/#services">Services</a></li>
+                <li><a class="nav-link scrollto" href="http://www.turbotask.co/#contact">Contact</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -86,31 +86,31 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>M<span class="mad">a</span>d G<span class="mad">u</span>y</h3>
+                    <h3>Turbo <span class="mad">Task</span></h3>
                     <h3>Automation</h3>
-                    <p><a href="http://www.madguy.net/#contact">
+                    <p><a href="http://www.turbotask.co/#contact">
                         166 Geary Street, 1670 <br>
                         San Francisco, CA 94108<br>
                         United States </a><br><br>
                         <strong>Phone:</strong><a href="tel:+14152121444"> +1 415 212 1444</a><br>
-                        <strong>Email:</strong><a href="mailto:hi@madguy.net"> hi@madguy.net</a><br>
+                        <strong>Email:</strong><a href="mailto:hi@turbotask.co"> hi@turbotask.co</a><br>
                     </p>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#hero">Home</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Services</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#contact">Contact Us</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.turbotask.co/#hero">Home</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.turbotask.co/#services">Services</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.turbotask.co/#contact">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Our Services</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Micro and Macro Automation</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Software Solutions</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Data Cleaning and Visualization</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.madguy.net/#services">Machine Learning and AI models</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.turbotask.co/#services">Micro and Macro Automation</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.turbotask.co/#services">Software Solutions</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.turbotask.co/#services">Data Cleaning and Visualization</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://www.turbotask.co/#services">Machine Learning and AI models</a></li>
                     </ul>
                 </div>
             </div>
@@ -119,7 +119,7 @@
 
     <div class="container footer-bottom clearfix">
         <div class="copyright">
-            &copy; Copyright <strong><span>Mad Guy Automation </span></strong>{{ year }}. All Rights Reserved
+            &copy; Copyright <strong><span>Turbo Task Automation </span></strong>{{ year }}. All Rights Reserved
         </div>
     </div>
 </footer><!-- End Footer -->
