--- a/templates/index_tt.html
+++ b/templates/index_tt.html
@@ -12,7 +12,7 @@
         <div class="row overlay">
             <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
                  data-aos="fade-up" data-aos-delay="200">
-                <h1>Increase your team's productivity with Turbo <span class="mad">Task</span> Automation</h1>
+                <h1>Advanced Automation and Data Analytics</h1>
                 <div class="d-flex justify-content-center justify-content-lg-start">
                     <a href="https://www.youtube.com/embed/y2TuytHrGEE"
                        class="glightbox btn-get-started scrollto">Watch Video <i
@@ -29,13 +29,21 @@
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>Turbo Task – Where Business Meets Automation</h2>
+                <h2>Mad... Crazy... But the job gets done well</h2>
             </div>
 
             <div class="row content">
                 <div class="col-lg-6">
                     <p>
-                    Say goodbye to manual headaches and hello to streamlined success. Let us turbocharge your efficiency and supercharge your growth through cutting-edge business process automation. Your tasks, our technology – a match made for success!
+                        That's the motto of Mad Guy Automation, the software, automation, and data analytics solutions
+                        provider.
+                        <br><br>
+                        We pride ourselves on being lateral thinkers who pride on using unique and creative software
+                        solutions
+                        for the challanges our customers face.
+                        <br><br>
+                        But don't let our demeanor fool you. When it comes to getting the job done, Mad Guy
+                        Automation is serious business.
                     </p>
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0">
@@ -248,7 +256,7 @@
                     </p>
                 </div>
                 <div class="col-lg-3 cta-btn-container text-center">
-                    <a class="cta-btn align-middle scrollto" href="http://www.turbotask.co/#contact">Contact Us</a>
+                    <a class="cta-btn align-middle scrollto" href="http://www.madguy.net/#contact">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -268,13 +276,13 @@
                 <div class="address">
                     <i class="bi bi-geo-alt"></i>
                     <h4>Location:</h4>
-                    <p><a href="http://www.turbotask.co/#map">166 Geary St, 1670, San Francisco, CA 94108</a></p>
+                    <p><a href="http://www.madguy.net/#map">166 Geary St, 1670, San Francisco, CA 94108</a></p>
                 </div>
                 <div id="map">
                     <div class="email">
                         <i class="bi bi-envelope"></i>
                         <h4>Email:</h4>
-                        <p><a href="mailto:hi@turbotask.co">hi@turbotask.co</a></p>
+                        <p><a href="mailto:hi@madguy.net">hi@madguy.net</a></p>
                     </div>
                 </div>
                 <div class="phone">
