https link update

--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -68,10 +68,10 @@
 
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto active" href="http://turbotask.co/#hero">Home</a></li>
-                <li><a class="nav-link scrollto" href="http://turbotask.co/#about">About</a></li>
-                <li><a class="nav-link scrollto" href="http://turbotask.co/#services">Services</a></li>
-                <li><a class="nav-link scrollto" href="http://turbotask.co/#contact">Contact</a></li>
+                <li><a class="nav-link scrollto active" href="https://turbotask.co/#hero">Home</a></li>
+                <li><a class="nav-link scrollto" href="https://turbotask.co/#about">About</a></li>
+                <li><a class="nav-link scrollto" href="https://turbotask.co/#services">Services</a></li>
+                <li><a class="nav-link scrollto" href="https://turbotask.co/#contact">Contact</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -88,7 +88,7 @@
                 <div class="col-lg-3 col-md-6 footer-contact">
                     <h3>Turbo <span class="mad">Task</span></h3>
                     <h3>Automation</h3>
-                    <p><a href="http://turbotask.co/#contact">
+                    <p><a href="https://turbotask.co/#contact">
                         166 Geary Street, 1670 <br>
                         San Francisco, CA 94108<br>
                         United States </a><br><br>
@@ -99,18 +99,18 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://turbotask.co/#hero">Home</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://turbotask.co/#services">Services</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://turbotask.co/#contact">Contact Us</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#hero">Home</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Services</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#contact">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Our Services</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://turbotask.co/#services">Micro and Macro Automation</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://turbotask.co/#services">Software Solutions</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://turbotask.co/#services">Data Cleaning and Visualization</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="http://turbotask.co/#services">Machine Learning and AI models</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Micro and Macro Automation</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Software Solutions</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Data Cleaning and Visualization</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Machine Learning and AI models</a></li>
                     </ul>
                 </div>
             </div>
