--- a/templates/index.html
+++ b/templates/index.html
@@ -248,7 +248,7 @@
                     </p>
                 </div>
                 <div class="col-lg-3 cta-btn-container text-center">
-                    <a class="cta-btn align-middle scrollto" href="http://turbotask.co/#contact">Contact Us</a>
+                    <a class="cta-btn align-middle scrollto" href="https://turbotask.co/#contact">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -268,7 +268,7 @@
                 <div class="address">
                     <i class="bi bi-geo-alt"></i>
                     <h4>Location:</h4>
-                    <p><a href="http://turbotask.co/#map">166 Geary St, 1670, San Francisco, CA 94108</a></p>
+                    <p><a href="https://turbotask.co/#map">166 Geary St, 1670, San Francisco, CA 94108</a></p>
                 </div>
                 <div id="map">
                     <div class="email">
