--- a/static/css/style.css
+++ b/static/css/style.css
@@ -289,6 +289,10 @@ h6 {
   color: #fff;
 }
 
+.center {
+    text-align: center;
+}
+
 @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
@@ -898,6 +902,17 @@ section {
   margin-bottom: 10px;
 }
 
+.youtube{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+
+}
+
 .services .icon-box .icon i {
   color: #c13636;
   font-size: 36px;
@@ -908,6 +923,7 @@ section {
   font-weight: 500;
   margin-bottom: 15px;
   font-size: 24px;
+  color: rgb(55, 81, 126);
 }
 
 .services .icon-box h4 a {
