--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -63,15 +63,18 @@
 
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="{{ url_for('index') }}" style="width:300px;" class="logo me-auto"><img
-                src="{{ url_for('static', filename='img/logo.svg') }}" alt="Turbo Task Automation logo"
+                src="{{ url_for('static', filename='img/paul_ged_logo-03.svg') }}" alt="Turbo Task Automation logo"
                 class="img-fluid"></a>
 
         <nav id="navbar" class="navbar">
             <ul>
                 <li><a class="nav-link scrollto active" href="https://turbotask.co/#hero">Home</a></li>
                 <li><a class="nav-link scrollto" href="https://turbotask.co/#about">About</a></li>
-                <li><a class="nav-link scrollto" href="https://turbotask.co/#services">Services</a></li>
+                <li><a class="nav-link scrollto" href="https://turbotask.co/#services">Experience</a></li>
                 <li><a class="nav-link scrollto" href="https://turbotask.co/#contact">Contact</a></li>
+                <li><a href="https://github.com/geddie212"><i class="bi bi-github" style="font-size: 20px;"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/paul-ged/"><i class="bi bi-linkedin" style="font-size: 20px;"></i></a></li>
+                <li><a href="https://www.youtube.com/@paullovespython"><i class="bi bi-youtube" style="font-size: 20px;"></i></a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -86,31 +89,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Turbo <span class="mad">Task</span></h3>
+                    <h3><span class="mad">Paul</span> Ged</h3>
                     <h3>Automation</h3>
                     <p><a href="https://turbotask.co/#contact">
                         166 Geary Street, 1670 <br>
                         San Francisco, CA 94108<br>
                         United States </a><br><br>
                         <strong>Phone:</strong><a href="tel:+14152121444"> +1 415 212 1444</a><br>
-                        <strong>Email:</strong><a href="mailto:hi@turbotask.co"> hi@turbotask.co</a><br>
+                        <strong>Email:</strong><a href="mailto:im@paulged.com"> im@paulged.com</a><br>
                     </p>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#hero">Home</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Services</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#contact">Contact Us</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#hero">Home</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#services">Experience</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
-                    <h4>Our Services</h4>
+                    <h4>Social</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Micro and Macro Automation</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Software Solutions</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Data Cleaning and Visualization</a></li>
-                        <li><i class="bx bx-chevron-right"></i> <a class="scrollto" href="https://turbotask.co/#services">Machine Learning and AI models</a></li>
+                        <li><a href="https://github.com/geddie212"><i class="bi bi-github" style="font-size: 20px;"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/paul-ged/"><i class="bi bi-linkedin" style="font-size: 20px;"></i></a></li>
+                        <li><a href="https://www.youtube.com/@paullovespython"><i class="bi bi-youtube" style="font-size: 20px;"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -119,7 +121,7 @@
 
     <div class="container footer-bottom clearfix">
         <div class="copyright">
-            &copy; Copyright <strong><span>Turbo Task Automation </span></strong>{{ year }}. All Rights Reserved
+            &copy; Copyright <strong><span>Paul Ged Automation </span></strong>{{ year }}. All Rights Reserved
         </div>
     </div>
 </footer><!-- End Footer -->
