paul ged favicon and page name

--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Turbo Task</title>
+    <title>Paul Ged</title>
     <meta content="Transform your business with cutting-edge automation and data analytics solutions. Mad Guy Automation combines advanced technologies and expertise to help you streamline operations, improve productivity, and gain valuable insights from your data. Discover how our innovative tools and services can revolutionize your business today."
           name="description">
     <meta content="automation, data analytics, business transformation, productivity, efficiency, insights, machine learning, artificial intelligence, predictive analytics, data visualization, process optimization, data-driven decision-making, cloud computing, digital transformation."
           name="keywords">
 
     <!-- Favicons -->
-    <link href="{{ url_for('static', filename='img/tt favicon.png') }}" rel="icon">
-    <link href="{{ url_for('static', filename='img/tt favicon ipad touch.png') }}" rel="apple-touch-icon">
+    <link href="{{ url_for('static', filename='img/paul ged favicon.png') }}" rel="icon">
+    <link href="{{ url_for('static', filename='img/paul ged favicon ipad touch.png') }}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
